# devops-agents

./: .gitignore  README.md
kubernetes-admin/: Dockerfile  README.md  deployment.yaml  main.py  pyproject.toml  rbac.yaml
kubernetes-admin/kubernetes_admin/: __init__.py  agent.py
kubernetes-admin/kubernetes_admin/tools/: kubectl_tool.py
